# krunner-firefox

./: .gitignore  CMakeLists.txt  FirefoxProfileRunner.kdev4  Messages.sh  README.md  install-user.sh  install.sh  preinst  uninstall.sh
.github/workflows/: ci.yaml
src/: CMakeLists.txt  Config.h  Profile.cpp  Profile.h  firefoxprofilerunner.cpp  firefoxprofilerunner.h  firefoxprofilerunner.json  firefoxprofilerunner.json.in  helper.h  plasma-runner-firefoxprofilerunner.desktop  utils.h
src/config/: config_types.h  firefoxprofilerunner_config.cpp  firefoxprofilerunner_config.h  firefoxprofilerunner_config.ui  plasma-runner-firefoxprofilerunner_config.desktop
src/profile/: Profile.cpp  Profile.h  ProfileManager.cpp  ProfileManager.h
src/profiles/: ProfileManager.cpp  ProfileManager.h
test/: CMakeLists.txt  Config.h  ProfileManagerTest.cpp  ProfileManagerTest.h  helper.h
test/resources/: FirefoxProfileRunnerTestPreferences  firefox.desktop  profiles.ini  profiles_install.ini
